# kyouko

./: .env.dev  .gitignore  README.md  __kasodani_kyouko_touhou_drawn_by_nikorashi_ka__32342fb4ca955f60233de68cb26e6948.jpg:Zone.Identifier  bot.py  pyproject.toml
src/plugins/test/: __init__.py
